--- a/scss/layout/_layout-banner.scss
+++ b/scss/layout/_layout-banner.scss
@@ -71,7 +71,7 @@
 	display: block;
 	height: 50px;
 	float: right;
-	position: fixed;
+	position: absolute;
 	top: 30px;
 	right: $gutter * 1.5;
 	text-indent: -9999px;
