--- a/scss/layout/_layout-index.scss
+++ b/scss/layout/_layout-index.scss
@@ -9,7 +9,7 @@
 }
 
 .band--tint {
-	background-color: darken($white,2%);
+	background-color: lighten($grey-lighter,4%);
 }
 
 .wrap {
@@ -25,40 +25,6 @@
 /* ==========================================================================
    #INDEX
    ========================================================================== */
-   
-.work--alt {
-	
-	.work__item {
-		float: left;
-		width: 33.33333%;
-	}
-	
-	.work__image-link {
-		width: 100%;
-	}
-	
-	.work__desc {
-		display: none;
-	}
-}
-
-.work--alt-2 {
-	max-width: 1800px !important;
-	
-	.work__item {
-		float: left;
-		width: 33.33333%;
-	}
-	
-	.work__image-link {
-		width: 100%;
-	}
-	
-	.work__desc {
-		display: none;
-	}
-}
-
 
 .work {
 	list-style: none;
