--- a/scss/layout/_layout-project.scss
+++ b/scss/layout/_layout-project.scss
@@ -66,7 +66,7 @@
 	}
 	
 	hr {
-		border-color: $color-primary;
+		border-color: $grey-dark;
 	}
 	
 	p a {
@@ -145,7 +145,7 @@
  
 .masthead--oca {
 	background: 
-		url(../img/interface/work/oca/masthead-bottom-bg.png) repeat-x center bottom,
+		url(../img/interface/work/oca/masthead-bottom-grey-bg.png) repeat-x center bottom,
 		url(../img/interface/work/oca/masthead-bg.jpg) center center,
 		rgb(201,25,34);
 }
@@ -524,14 +524,27 @@
 	background: 
 		url(../img/interface/work/slim-be/red-tile-gradient.jpg) repeat-x center bottom,
 		url(../img/interface/work/slim-be/red-tile-light.jpg) center 0, 
-		rgb(228,26,55);
-		
+		rgb(228,26,55);	
 	
+/*
 	&:before {
 		background: linear-gradient(to bottom, rgba($white,0) 0%,rgba($white,1) 100%);
 		content: "";
 		display: block;
 		height: 100px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		z-index: 1;
+	}
+*/
+		
+	&:before {
+		background: rgb(252,210,62);
+		content: "";
+		display: block;
+		height: 8px;
 		position: absolute;
 		bottom: 0;
 		left: 0;
