imported fonts rather than use TypeKit. So some font-size adjustments need to be made. Also included a requestanimationframe polyfill

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -31,6 +31,7 @@
 'elements/img',
 'elements/site',
 'elements/type-heading',
+'elements/type-import',
 'elements/type-list',
 'elements/type-misc',
 'elements/type-paragraph',
