--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -44,8 +44,8 @@ $MQs							: true;
 
 // Base
 
-$font-size 						: 18;
-$font-family 					: "tablet-gothic-narrow", "Helvetica Neue", sans-serif;
+$font-size 						: 17;
+$font-family 					: "droidsans", "Helvetica Neue", sans-serif;
 $font-color 					: $grey;
 $font-lineheight 				: 1.5;
 $font-weight 					: 400;
@@ -65,7 +65,7 @@ $codefont-font-family			: Monaco, Courier New, monospace;
 // Headings
 
 $heading-font-color 			: $grey-darker;
-$heading-font-family 			: "ff-good-headline-web-pro-con", "Helvetica Neue", sans-serif;
+$heading-font-family 			: "goodpro", "Helvetica Neue", sans-serif;
 $heading-font-style 			: italic;
 $heading-font-weight 			: 900;
 $heading-lineheight				: $font-lineheight;
@@ -91,7 +91,7 @@ $base-bg						: $white;
 
 $border-color    				: $grey-lighter;
 $border-style					: solid;
-$border-width 					: 4px;
+$border-width 					: 8px;
 $border-radius 					: 0;
 $border							: $border-width $border-style $border-color;
 
@@ -106,7 +106,7 @@ $border							: $border-width $border-style $border-color;
 $button-bg 								: transparent;
 $button-border-color					: $grey-darker;
 $button-border-style 					: $border-style;
-$button-border-width 					: $border-width;
+$button-border-width 					: $border-width / 2;
 $button-border-radius 					: $border-radius;
 
 $button-font-family						: $font-family;
