--- a/scss/elements/_hr.scss
+++ b/scss/elements/_hr.scss
@@ -9,7 +9,7 @@
 
 hr {
 	border: 0;
-	border-bottom: ($border-width * 2) $border-style $border-color;
+	border-bottom: $border-width $border-style $border-color;
 	clear : both;
 	display : block;
 	height: 0;
