--- a/scss/layout/_layout-index.scss
+++ b/scss/layout/_layout-index.scss
@@ -38,11 +38,12 @@
 	margin: 0 auto $vertical-spacing;
 	padding: 0;
 	width: 100%;
-	max-width: 600px;
+	max-width: 500px;
 
 	@include bp(bp5) {
 		display: flex;
 		align-items: center;
+		margin-bottom: 0;
 		max-width: none;
 		
 		&:nth-child(even) {
@@ -63,7 +64,15 @@
 
 .work__image {
 	display: block;
-	width: 100%;
+	margin-left: -10%; 	// (((50/500 x 100) x 6.00) / 600) x 100
+	width: 120%; 		// (600/500) x 100
+	max-width: none;
+	
+	@include bp(bp5) {
+		width: 100%;
+		max-width: 100%;
+		margin-left: 0;
+	}
 }
 
 .work__title {
@@ -89,7 +98,7 @@
 
 .work__desc {
 	box-sizing: border-box;
-	padding: 0 8.33333%;
+	//padding: 0 8.33333%;
 	
 	@include bp(bp5) {
 		padding: 0 50px;
