--- a/scss/layout/_layout-template.scss
+++ b/scss/layout/_layout-template.scss
@@ -14,6 +14,8 @@
  *    fade the page in with a transition once it's loaded.
  * 4. Just incase Javascript doesn't load, we force `opacity: 1;` so content is
  *    still visible.
+ * 5. As some elements run off the page the `overflow` values are adjusted so no
+ *    nasty horizontal scroll bars appear.
  */
 
 .page {
@@ -21,15 +23,17 @@
 	display: flex; /* [2] */
 	flex-direction: column; /* [2] */
 	min-height: 100vh; /* [3] */
-	opacity: 0;
+	//opacity: 0;
+	overflow: hidden; /* [5] */
+	overflow-y: auto; /* [5] */
 	
 	.pace-done & {
-		opacity: 1; /* [4] */
+		//opacity: 1; /* [4] */
 		transition: opacity .5s ease;
 	}
 	
 	.no-js & {
-		opacity: 1 !important; /* [5] */
+		//opacity: 1 !important; /* [5] */
 	}
 }
 
@@ -74,6 +78,85 @@
 		transition: all .10s;
 	}
 }
+
+
+
+
+
+
+.nprogress-busy body {
+  cursor: wait;
+}
+
+.page {
+  opacity: 0;
+  transition: .25s ease;
+}
+
+.nprogress-done .page {
+	opacity: 1;
+}
+
+
+//all 300ms linear 700ms
+
+.nprogress-busy {}
+
+/* Make clicks pass-through */
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: #29d;
+
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 8px;
+}
+
+/* Fancy blur effect */
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+  opacity: 1.0;
+
+  -webkit-transform: rotate(3deg) translate(0px, -4px);
+      -ms-transform: rotate(3deg) translate(0px, -4px);
+          transform: rotate(3deg) translate(0px, -4px);
+}
+
+.nprogress-custom-parent {
+  overflow: hidden;
+  position: relative;
+}
+
+.nprogress-custom-parent #nprogress .bar {
+  position: absolute;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
