Updated preload bar

--- a/scss/layout/_layout-contentinfo.scss
+++ b/scss/layout/_layout-contentinfo.scss
@@ -102,12 +102,12 @@
 		font-size: 1.2em;
 		margin-right: $gutter / 2;
 		position: relative;
-		top: 2px;
+		top: -1px;
 		vertical-align: text-top;
 	}
 	
 	.icon--envelope {
-		top: 3px;
+		top: 0;
 	}
 	
 	.icon--location {
