--- a/scss/layout/_layout-template.scss
+++ b/scss/layout/_layout-template.scss
@@ -23,124 +23,54 @@
 	display: flex; /* [2] */
 	flex-direction: column; /* [2] */
 	min-height: 100vh; /* [3] */
-	//opacity: 0;
+	opacity: 0;
 	overflow: hidden; /* [5] */
 	overflow-y: auto; /* [5] */
 	
-	.pace-done & {
-		//opacity: 1; /* [4] */
-		transition: opacity .5s ease;
+	.nprogress-busy & {
+		cursor: wait;
+		pointer-events: none;
+		user-select: none;
+	}
+	
+	.nprogress-done & {
+		opacity: 1; /* [4] */
+		transition: all .50s .75s;
 	}
 	
 	.no-js & {
-		//opacity: 1 !important; /* [5] */
+		opacity: 1 !important; /* [5] */
 	}
 }
 
-
-
-
-
-/* ==========================================================================
-   #PAGE LOAD (pace.js)
-   ========================================================================== */
-   
-/**
- * Pace.js is a plug-in that adds a progress indicator to your pages. We use a
- * basic bar that spans across the top of the browser, indicting the page load
- * progress, which disppears once it's done.
- */
-
-.pace {
-	pointer-events: none;
-	user-select: none;
-}
-
-.pace-progress {
-	background: $color-primary;
-	height: 8px;
-	position: fixed;
-	top: 0;
-	right: 100%;
-	width: 100%;
-	z-index: 2000;	
-}
 
 /**
  * What happens when the bar isn't needed anymore.
  */
- 
-.pace-inactive {
-	//display: none;
-	
-	.pace-progress {
-		opacity: 0;
-		transition: all .10s;
-	}
-}
 
-
-
-
-
-
-.nprogress-busy body {
-  cursor: wait;
-}
-
-.page {
-  opacity: 0;
-  transition: .25s ease;
-}
-
-.nprogress-done .page {
-	opacity: 1;
-}
-
-
-//all 300ms linear 700ms
-
-.nprogress-busy {}
-
-/* Make clicks pass-through */
 #nprogress {
-  pointer-events: none;
-}
-
-#nprogress .bar {
-  background: #29d;
-
-  position: fixed;
-  z-index: 1031;
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 8px;
-}
-
-/* Fancy blur effect */
-#nprogress .peg {
-  display: block;
-  position: absolute;
-  right: 0px;
-  width: 100px;
-  height: 100%;
-  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
-  opacity: 1.0;
-
-  -webkit-transform: rotate(3deg) translate(0px, -4px);
-      -ms-transform: rotate(3deg) translate(0px, -4px);
-          transform: rotate(3deg) translate(0px, -4px);
-}
-
-.nprogress-custom-parent {
-  overflow: hidden;
-  position: relative;
-}
-
-.nprogress-custom-parent #nprogress .bar {
-  position: absolute;
+	background: $grey-lighter;
+	position: fixed;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	width: 100%;
+	z-index: 2000;
+	
+	.bar {
+		background: $color-primary;
+		display: block;
+		height: 8px;
+	}
+	
+	.nprogress-done & {
+		opacity: 1 !important;
+		
+		.bar {
+			height: 0;
+			transition: transform .20s, height .10s .30s !important;
+		}
+	}
 }
 
 
