--- a/scss/elements/_form-button.scss
+++ b/scss/elements/_form-button.scss
@@ -15,7 +15,7 @@
 	background-color: $button-bg;
 	background-repeat: no-repeat;
 	border: $button-border-width $button-border-style $button-border-color;
-	border-radius: $border-radius;
+	border-radius: $button-border-radius;
 	box-sizing: border-box;
 	color: $button-font-color;
 	cursor: pointer;
@@ -52,5 +52,164 @@
 	
 	&:active {
 		top: 1px;
+	}
+}
+
+
+
+
+.icon {
+	display: inline-block;
+    fill: #a3cd39;
+    height: 1.1em;
+    line-height: 40px;
+    position: relative;
+    top: -2px;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+    vertical-align: middle;
+    width: 1.1em;
+}
+
+
+.btn .icon {
+	height: 20px;
+    width: 20px;
+}
+
+
+.btn--arrow,
+.btn--grid {
+	
+	.icon {
+		fill: $white;
+		opacity: 0;
+		margin-top: -10px;
+		position: absolute;
+		top: 50%;
+		transition: all .15s 0s;
+	}
+	
+	&:hover,
+	&:focus {
+		
+		.icon {
+			opacity: 1;
+			transition: all .20s .15s;
+		}
+	}
+}
+
+.btn--arrow {
+	
+	.icon {
+		right: 20px;
+	}
+	
+	&:hover,
+	&:focus {
+		padding-right: 44px;
+		
+		.icon {
+			right: 14px;
+		}
+		
+		&.btn--stroke {
+			padding-right: 40px;
+			
+			.icon {
+				right: 10px;
+			}
+		}
+	}
+}
+
+.btn--grid {
+	
+	.icon {
+		left: 25px;
+	}
+	
+	&:hover,
+	&:focus {
+		padding-left: 52px;
+		
+		.icon {
+			left: 19px;
+		}
+		
+		&.btn--stroke {
+			padding-left: 48px;
+			
+			.icon {
+				left: 15px;
+			}
+		}
+	}
+}
+
+.icon--grid {
+	display: inline-block;
+	opacity: 0;
+	width: 20px;
+	
+	.row-1,
+	.row-2 {
+		background: $white;
+		display: block;
+		height: 4px;
+		margin: 2px;
+		position: relative;
+		opacity: 0;
+		transition: opacity 0s .20s;
+		width: 4px;
+		
+		&:before,
+		&:after {
+			background: $white;
+			content: "";
+			display: block;
+			height: 4px;
+			margin: 2px;
+			opacity: 0;
+			position: absolute;
+			top: -2px;
+			right: -8px;
+			width: 4px;
+			transition: opacity 0s .20s;
+		}
+		
+		&:after {
+			left: auto;
+			right: -14px;
+		}
+	}
+	
+	.btn:hover &,
+	.btn:focus & {
+		opacity: 1;
+		
+		.row-1,
+		.row-2,
+		.row-3 {
+			opacity: 1;
+			
+			&:before,
+			&:after {
+				opacity: 1;
+			}
+		}
+			
+		.row-1 			{transition: opacity .10s  0s   ease-out;}
+		.row-1:before 	{transition: opacity .10s .05s ease-out;}
+		.row-1:after	{transition: opacity .10s .10s ease-out;}
+
+		.row-2 			{transition: opacity .10s .15s ease-out;}
+		.row-2:before 	{transition: opacity .10s .20s ease-out;}
+		.row-2:after	{transition: opacity .10s .25s ease-out;}
+		
+		.row-3 			{transition: opacity .10s .30s ease-out;}
+		.row-3:before 	{transition: opacity .10s .35s ease-out;}
+		.row-3:after	{transition: opacity .10s .40s ease-out;}
 	}
 }
