--- a/scss/elements/_form-button.scss
+++ b/scss/elements/_form-button.scss
@@ -30,12 +30,12 @@
 	line-height: $font-lineheight;
 	margin-bottom: $vertical-spacing;
 	*margin-left: .3em;
-	padding: 10px 20px;
+	padding: 12px 20px 10px;
 	position: relative;
 	text-align: center;
 	text-decoration: none;
 	text-transform: $button-font-transform;
-	transition: all .25s;
+	transition: all .20s;
 	vertical-align: middle;
 
 	&:visited {
@@ -56,6 +56,25 @@
 }
 
 
+.btn--solid {
+	background: $button-border-color;
+	color: $white;
+	
+	&:visited {
+		background-color: $button-border-color;
+		border-color: $button-border-color;
+		color: $white;
+	}
+	
+	&:hover,
+	&:focus {
+		background-color: $color-primary;
+		border-color: $color-primary;
+	}
+}
+
+
+
 
 
 .icon {
@@ -65,8 +84,7 @@
     line-height: 40px;
     position: relative;
     top: -2px;
-    -webkit-transition: all .25s;
-    transition: all .25s;
+    transition: all .20s;
     vertical-align: middle;
     width: 1.1em;
 }
@@ -87,7 +105,7 @@
 		margin-top: -10px;
 		position: absolute;
 		top: 50%;
-		transition: all .15s 0s;
+		transition: all .10s 0s;
 	}
 	
 	&:hover,
@@ -95,7 +113,7 @@
 		
 		.icon {
 			opacity: 1;
-			transition: all .20s .15s;
+			transition: all .20s .1023s;
 		}
 	}
 }
@@ -113,14 +131,6 @@
 		.icon {
 			right: 14px;
 		}
-		
-		&.btn--stroke {
-			padding-right: 40px;
-			
-			.icon {
-				right: 10px;
-			}
-		}
 	}
 }
 
@@ -137,80 +147,58 @@
 		.icon {
 			left: 19px;
 		}
-		
-		&.btn--stroke {
-			padding-left: 48px;
-			
-			.icon {
-				left: 15px;
-			}
-		}
 	}
 }
 
 .icon--grid {
 	display: inline-block;
-	opacity: 0;
-	width: 20px;
+	position: relative;
 	
-	.row-1,
-	.row-2,
-	.row-3 {
+	&:before,
+	&:after,
+	span:before,
+	span:after {
 		background: $white;
+		border-radius: 1px;
+		content: "";
 		display: block;
-		height: 4px;
-		margin: 2px;
-		position: relative;
+		height: 7px;
+		position: absolute;
+		top: 2px;
+		left: 2px;
 		opacity: 0;
 		transition: opacity 0s .20s;
-		width: 4px;
-		
-		&:before,
-		&:after {
-			background: $white;
-			content: "";
-			display: block;
-			height: 4px;
-			margin: 2px;
-			opacity: 0;
-			position: absolute;
-			top: -2px;
-			right: -8px;
-			width: 4px;
-			transition: opacity 0s .20s;
-		}
-		
-		&:after {
-			left: auto;
-			right: -14px;
-		}
+		width: 7px;
+	}
+	
+	&:after,
+	span:after {
+		left: auto;
+		right: 2px;
+	}
+	
+	span {
+		display: block;
+		height: 6px;
+		position: absolute;
+		top: 9px;
+		width: 100%;
 	}
 	
 	.btn:hover &,
 	.btn:focus & {
 		opacity: 1;
-		
-		.row-1,
-		.row-2,
-		.row-3 {
-			opacity: 1;
 			
-			&:before,
-			&:after {
-				opacity: 1;
-			}
+		&:before,
+		&:after,
+		span:before,
+		span:after {
+			opacity: 1;
 		}
 			
-		.row-1 			{transition: opacity .10s  0s   ease-out;}
-		.row-1:before 	{transition: opacity .10s .05s ease-out;}
-		.row-1:after	{transition: opacity .10s .10s ease-out;}
-
-		.row-2 			{transition: opacity .10s .15s ease-out;}
-		.row-2:before 	{transition: opacity .10s .20s ease-out;}
-		.row-2:after	{transition: opacity .10s .25s ease-out;}
-		
-		.row-3 			{transition: opacity .10s .30s ease-out;}
-		.row-3:before 	{transition: opacity .10s .35s ease-out;}
-		.row-3:after	{transition: opacity .10s .40s ease-out;}
+		&:before		{transition: opacity .10s .20s ease-out;}
+		&:after 		{transition: opacity .10s .25s ease-out;}
+		span:before		{transition: opacity .10s .30s ease-out;}
+		span:after		{transition: opacity .10s .35s ease-out;}
 	}
 }
