--- a/scss/elements/_hr.scss
+++ b/scss/elements/_hr.scss
@@ -16,4 +16,9 @@ hr {
 	margin: $vertical-spacing 0;
 	padding: 0;
 	width: 50px;
+	
+	.align-center & {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
