--- a/scss/elements/_type-misc.scss
+++ b/scss/elements/_type-misc.scss
@@ -8,12 +8,14 @@
  */
 
 ::-moz-selection {
-	background-color: lighten($base-bg, 65%);
+	background-color: $grey-darker;
+	color: $white;
 	text-shadow: none;
 }
 
 ::selection {
-	background-color: lighten($base-bg, 65%);
+	background-color: $grey-darker;
+	color: $white;
 	text-shadow: none;
 }
 
