--- a/scss/layout/_layout-index.scss
+++ b/scss/layout/_layout-index.scss
@@ -23,6 +23,10 @@
 	.masthead--home + & {
 		padding-top: 100px;
 	}
+	
+	+ .band {
+		border-top: $border-width $border-style lighten($border-color,2.5%);
+	}
 }
 
 .band--tint {
@@ -166,3 +170,9 @@
 	width: 100% !important;
 }
 */
+
+
+.view-all {
+	margin-top: $vertical-spacing * 5;
+}
+
