--- a/scss/modules/_modules-grid.scss
+++ b/scss/modules/_modules-grid.scss
@@ -36,7 +36,13 @@
 }
 
 
-
+.grid--flexend {
+	
+	@include bp(bp5) {
+		display: flex;
+		align-items: flex-end;
+	}
+}
 
 
 /*------------------------------------*\
