Added animation when page loads. Also updated button styles

--- a/scss/layout/_layout-index.scss
+++ b/scss/layout/_layout-index.scss
@@ -4,6 +4,15 @@
 	transition: all .25s;
 	width: 100%;
 	
+	.nprogress-busy & {
+		transform: translateY(20px);
+	}
+	
+	.nprogress-done & {
+		transition: all .40s ease-out .75s;
+		transform: translateY(0);
+	}
+	
 	@include bp(bp3) {
 		padding: 130px 0 110px;
 	}
