Updated LinkedIn social image e after using tinypng to see if compression helps with LinkedIn sharing issue.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -66,7 +66,7 @@ $codefont-font-family			: Monaco, Courier New, monospace;
 
 $heading-font-color 			: $grey-darker;
 $heading-font-family 			: "Good Pro", "Helvetica Neue", sans-serif;
-$heading-font-style 			: italic;
+$heading-font-style 			: normal;
 $heading-font-weight 			: 900;
 $heading-lineheight				: $font-lineheight;
 
