Updated gbm files for client ent to review

--- a/sites/gbm/scss/_variables.scss
+++ b/sites/gbm/scss/_variables.scss
@@ -33,7 +33,21 @@ $color-primary 					: rgb(148,18,31);
 $color-success					: rgb(62,178,128);
 $color-error					: rgb(190,40,46);
 
+/*
+@brown-sabbath: rgb(45,23,15);
+@brown-darker: rgb(65,44,36);
+@brown-dark: rgb(103,86,80);
+@brown: rgb(141,129,123);
+@brown-light: rgb(197,192,189);
+@brown-lighter: rgb(217,212,210);
+@brown-lightest: rgb(235,234,233);
 
+// colour palettes
+
+@alertcolor: @darkgrey;
+@errorcolor: @basecolor;
+@successcolor: rgb(41,139,29);
+*/
 
 
 
