--- a/sites/gbm/scss/layout/_layout-banner.scss
+++ b/sites/gbm/scss/layout/_layout-banner.scss
@@ -8,7 +8,8 @@
  */
   
 .info-bar {
-	background: $grey-darker;
+	background: $grey-darker url(../img/interface/bg-tile-dark.png) center top;
+	box-shadow: inset 0 -4px 8px $black;
 	box-sizing: border-box;
 	@include clearfix;
 	color: $white;
@@ -102,32 +103,6 @@
 	transition: background .20s;
 	width: 100%;
 	z-index: 1000;
-	
-/*
-	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b2303d), to(#94121f));
-    background-image: -webkit-linear-gradient(top, #b2303d, #94121f);
-    background-color: #94121f;
-    background-image: -moz-linear-gradient(top, #b2303d, #94121f);
-    background-image: -ms-linear-gradient(top, #b2303d, #94121f);
-    background-image: -o-linear-gradient(top, #b2303d, #94121f);
-    background-image: linear-gradient(top, #b2303d, #94121f);
-    background-repeat: repeat-x;
-    border-top: 1px solid #c70017;
-    border-bottom: 1px solid #7a000e;
-    
-    &:before {
-		border-top: 1px dashed rgba($white,.25);
-		border-bottom: 1px dashed rgba($white,.25);
-		box-shadow: 0 1px 2px rgba(0,0,0,.10);
-		content: "";
-		display: block;
-		position: absolute;
-		top: 1px;
-		right: 0;
-		bottom: 1px;
-		left: 0;
-    }
-*/
 	
 	&:before {
 		background: $white;
