--- a/sites/gbm/scss/layout/_layout-contentinfo.scss
+++ b/sites/gbm/scss/layout/_layout-contentinfo.scss
@@ -8,11 +8,13 @@
  */
  
 .page-foot {
-	background: $grey-darker;
+	background: $grey-darker url(../img/interface/bg-tile-dark.png) center top;
+	box-shadow: inset 0 1px 5px rgba($black,.50);
 	@include clearfix;
-	color: $grey-lighter;
+	color: $grey;
 	@include font-size(13);
 	padding: $vertical-spacing * 4 $gutter / 2 0;
+	text-shadow: 0 1px 1px $black;
 	
 	@include bp(bp5) {
 		padding: $vertical-spacing * 4 $gutter 0;
@@ -28,8 +30,10 @@
 	
 	a,
 	a:visited {
-		color: $grey-lighter;
-		text-shadow: 3px 0 $grey-darker, 2px 0 $grey-darker, 1px 0 $grey-darker, -3px 0 $grey-darker, -2px 0 $grey-darker, -1px 0 $grey-darker;
+		background-image: none;
+		color: $grey;
+		padding: 0;
+		text-shadow: none;
 	}
 	
 	a:hover,
@@ -48,6 +52,7 @@
 	
 	.icon {
 		fill: $white;
+		margin-right: 5px;
 	}
 	
 	.grid__item {
@@ -151,13 +156,26 @@
  */
  
 .footnote{
-	background: $black;
-	border-top: 1px solid lighten($grey-darker,2.5%);
+	background: rgba($black,.25);
+	border-top: 1px solid rgba($white,.04);
+	box-shadow: 0 -1px 5px rgba($black,.50);
 	@include clearfix;
 	margin: $vertical-spacing * 2 0 0 (-$gutter / 2);
 	padding: $vertical-spacing $gutter / 2 $vertical-spacing / 4;
+	position: relative;
 	text-align: center;
 	width: 100%;
+	
+	&:before {
+		border-top: 1px dashed rgba($white,.08);
+		content: "";
+		display: block;
+		height: 1px;
+		position: absolute;
+		top: 2px;
+		left: 0;
+		width: 100%;
+    }
 	
 	@include bp(bp5) {
 		margin-left: -$gutter;
@@ -180,6 +198,7 @@
 	
 	img {
 		height: 20px;
+		opacity: .25;
 		width: auto;
 		vertical-align: top;
 	}
