--- a/sites/gbm/scss/modules/_modules-filters.scss
+++ b/sites/gbm/scss/modules/_modules-filters.scss
@@ -4,12 +4,35 @@
 }
 
 .newsletter {
-	background: $color-primary;
-	padding: $vertical-spacing 0 0;
+	background-color: $color-primary;
+	background-image: url("../img/interface/texture.png"), linear-gradient(lighten($color-primary,4%), darken($color-primary,8%));
+	border-top: 1px solid lighten($color-primary,20%);
+    border-bottom: 1px solid darken($color-primary,4%);
+	padding: $vertical-spacing 0 $vertical-spacing / 2;
 	text-align: center;
+	position: relative;
 	width: 100%;
+    
+    &:before {
+		border-top: 1px dashed rgba($white,.25);
+		border-bottom: 1px dashed rgba($white,.25);
+		content: "";
+		display: block;
+		position: absolute;
+		top: 2px;
+		right: 0;
+		bottom: 2px;
+		left: 0;
+		z-index: 0;
+    }
+    
+    .wrap {
+	    position: relative;
+	    z-index: 1;
+    }
 	
 	@include bp(bp5) {
+		padding: $vertical-spacing / 2 0 0;
 		text-align: left;
 		
 		.wrap {
@@ -20,8 +43,8 @@
 }
 
 .newsletter__hgroup {
-	color: lighten($color-primary, 40%);
-	margin-bottom: $vertical-spacing;
+	color: lighten($color-primary, 50%);
+	margin-bottom: $vertical-spacing / 2;
 		
 	@include bp(bp5) {
 		float: left;
@@ -40,6 +63,8 @@
 
 .newsletter__form {
 	@include clearfix;
+	margin: 0 auto $vertical-spacing / 2;
+	max-width: 500px;
 	
 	.text-input,
 	.btn {
