--- a/sites/gbm/scss/modules/_modules-masthead.scss
+++ b/sites/gbm/scss/modules/_modules-masthead.scss
@@ -8,7 +8,8 @@
  */
  
 .masthead {
-	background: $black;
+	background-color: $black;
+	background-position: center center;
 	background-size: cover;
 	color: $grey-lighter;
 	padding: $vertical-spacing * 2 0 $vertical-spacing;
@@ -16,7 +17,8 @@
 	text-align: center;
 	
 	&:before {
-		background: rgba($black,.25);
+		background: rgba($black,.50);
+		box-shadow: inset 0 -25px 50px rgba($black,.50);
 		content: "";
 		display: block;
 		height: 100%;
