--- a/sites/gbm/scss/layout/_layout-index.scss
+++ b/sites/gbm/scss/layout/_layout-index.scss
@@ -60,7 +60,14 @@
 	}
 }
 
+/**
+ * 1. Added to make childern the same height. Also added to `.mosaic__caption`.
+ */
+
 .mosaic__wrap {
+	display: flex; /* [1] */
+	flex-direction: column; /* [1] */
+	height: 100%; /* [1] */
 	position: relative;
 }
 
@@ -99,10 +106,19 @@
 	}
 }
 
+/**
+ * 1. Added to make childern the same height. Also added to `.mosaic__wrap`.
+ * 2. Prevents button stretching to be 100% wide.
+ * 3. Forces bottom to align to the bottom edge so they all line up.
+ */
+
 .mosaic__caption {
 	box-sizing: border-box;
 	color: $grey;
-	display: block;
+	display: flex; /* [1] */
+	flex-direction: column; /* [1] */
+	align-items: center; /* [2] */
+	flex: 1;
 	overflow: hidden;
 	padding: $vertical-spacing / 2 $gutter / 2;
 	text-align: center;
@@ -112,6 +128,10 @@
 		color: lighten($color-primary,60%);
 	}
 	
+	.btn {
+		margin-top: auto; /* [3] */
+	}
+	
 	@include bp(bp4) {
 		padding: $vertical-spacing $gutter;
 	}
@@ -119,7 +139,7 @@
 
 .mosaic__title {
 	color: $grey-darker;
-	@include font-size(15);
+	@include font-size(14);
 	margin-bottom: $vertical-spacing / 4;
 	transition: all .20s;
 	
@@ -134,6 +154,10 @@
 	}
 	
 	@include bp(bp3) {
+		@include font-size(17);
+	}
+	
+	@include bp(bp5) {
 		@include font-size(20);
 	}
 	
@@ -219,7 +243,7 @@
 	color: $white;
 	display: inline-block;
 	font-family: $alt-font-family;
-	@include font-size(13);
+	@include font-size(11);
 	font-weight: 700;
 	line-height: 14px;
 	margin-right: 5px;
@@ -248,8 +272,8 @@
 	.h-product & {
 		box-shadow: 1px 1px 2px rgba($black,.25);
 		position: absolute;
-		top: $vertical-spacing / 2;
-		left: -10px;
+		top: 10px;
+		left: -5px;
 	}
 }
 
