--- a/sites/gbm/scss/modules/_modules-crumbs.scss
+++ b/sites/gbm/scss/modules/_modules-crumbs.scss
@@ -8,9 +8,20 @@
  */
  
 .crumbs {
-	@include font-size(14);
+	@include font-size(12);
+	margin-bottom: $vertical-spacing / 2;
 	padding-left: 0;
+	text-align: center;
 	width: 100%;
+	
+	.masthead + .band & {
+		margin-top: -$vertical-spacing;
+	}
+	
+	@include bp(bp3) {
+		@include font-size(14);
+		
+	}
 }
 
 .crumbs__item {
@@ -21,7 +32,7 @@
 	&:before {
 		color: $grey-light;
 		content: "/";
-		font-weight: 500;
+		font-weight: 400;
 		margin: 0 $gutter / 4;
 	}
 	
