--- a/sites/gbm/scss/modules/_modules-minicart.scss
+++ b/sites/gbm/scss/modules/_modules-minicart.scss
@@ -9,7 +9,7 @@
 
 .mini-cart {
 	background: $white;
-	border-top: $border-width * 2 $border-style $color-primary;
+	border-top: $border-width * 4 $border-style $color-primary;
 	box-shadow: 0 0 10px rgba(0,0,0,.25);
 	box-sizing: border-box;
 	@include clearfix;
@@ -40,7 +40,7 @@
         display: block;
         height: 0; 
         position: absolute;
-        top: -12px;
+        top: -10px;
         right: 30px;
         width: 0; 
     }
@@ -97,6 +97,10 @@
 	}
 }
 
+/**
+ * 1. Prevents image from shrinking when there's deemed not enough space.
+ */
+ 
 .mini-cart__item {
 	border-bottom: $border-width $border-style $border-color;
     clear: both;
@@ -109,6 +113,7 @@
 	    float: left;
 	    margin-left: -75px;
 	    width: 60px;
+	    max-width: none; /* [1] */
     }
     
     @include bp(bp4) {
