--- a/sites/gbm/scss/modules/_modules-search.scss
+++ b/sites/gbm/scss/modules/_modules-search.scss
@@ -1,33 +1,39 @@
 
 .search {
-	margin-right: -2px;
+	
 	margin-bottom: 0;
 	position: relative;
 }
 
 .search__input {
-	background: $grey-lighter;
+	background: none;
 	border: none;
-	@include font-size(11);
+	border-bottom: 1px solid transparent;
+	color: $grey-darker;
+	@include font-size(10);
 	height: 25px;
-	opacity: 0;
+	line-height: 25px;
 	margin-bottom: 0;
-	padding-right: 30px;
+	padding: 0 30px 0 5px;
 	text-transform: uppercase;
 	width: 80px;
 	
 	.search:hover &,
 	&:focus {
-		opacity: 1;
+		border-color: $grey-lighter;
 		width: 150px;
 	}
 	
+	&:focus {
+		border-color: darken($grey-lighter,10%) !important;
+	}
+	
 	&::-webkit-input-placeholder {
-		@include font-size(11);
+		@include font-size(10);
 	}
 
 	&:-moz-placeholder {
-		@include font-size(11);
+		@include font-size(10);
 	}
 }
 
@@ -48,6 +54,14 @@
 		
 		svg {
 			fill: $color-primary;
+		}
+	}
+	
+	.search:hover &,
+	.search__input:focus + & {
+		
+		svg {
+			transform: scale(.90);
 		}
 	}
 }
